; ModuleID = '/home/carl/AnghaBench/rufus/src/bled/extr_open_transformer.c_check_errors_in_children.c'
source_filename = "/home/carl/AnghaBench/rufus/src/bled/extr_open_transformer.c_check_errors_in_children.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@bb_got_signal = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @check_errors_in_children(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %4 = load i32, i32* %2, align 4
  %5 = icmp ne i32 %4, 0
  br i1 %5, label %11, label %6

6:                                                ; preds = %1
  %7 = call i64 @wait(i32* %3)
  %8 = icmp slt i64 %7, 0
  br i1 %8, label %9, label %10

9:                                                ; preds = %6
  br label %22

10:                                               ; preds = %6
  br label %17

11:                                               ; preds = %1
  br label %12

12:                                               ; preds = %21, %20, %11
  %13 = call i64 @wait_any_nohang(i32* %3)
  %14 = icmp slt i64 %13, 0
  br i1 %14, label %15, label %16

15:                                               ; preds = %12
  br label %22

16:                                               ; preds = %12
  br label %17

17:                                               ; preds = %16, %10
  %18 = load i32, i32* %3, align 4
  %19 = icmp eq i32 %18, 0
  br i1 %19, label %20, label %21

20:                                               ; preds = %17
  br label %12

21:                                               ; preds = %17
  store i32 1, i32* @bb_got_signal, align 4
  br label %12

22:                                               ; preds = %15, %9
  ret void
}

declare dso_local i64 @wait(i32*) #1

declare dso_local i64 @wait_any_nohang(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
